testdata/baselines/reference/submodule/conformance/parserClassDeclaration1.errors.txt
error TS-1: Pre-emit (2) and post-emit (3) diagnostic counts do not match! This can indicate that a semantic _error_ was added by the emit resolver - such an error may not be reflected on the command line or in the editor, but may be captured in a baseline here!
parserClassDeclaration1.ts(1,17): error TS2304: Cannot find name 'A'.
parserClassDeclaration1.ts(1,19): error TS1172: 'extends' clause already seen.


!!! error TS-1: Pre-emit (2) and post-emit (3) diagnostic counts do not match! This can indicate that a semantic _error_ was added by the emit resolver - such an error may not be reflected on the command line or in the editor, but may be captured in a baseline here!
!!! related TS-1: The excess diagnostics are:
!!! related TS2304 parserClassDeclaration1.ts:1:27: Cannot find name 'B'.
==== parserClassDeclaration1.ts (2 errors) ====
    class C extends A extends B {
                    ~
!!! error TS2304: Cannot find name 'A'.
                      ~~~~~~~
!!! error TS1172: 'extends' clause already seen.
    }